[project]
name = "project-name"  # Change this for each project
version = "0.1.0"
description = "Project description"  # Change this for each project
requires-python = ">=3.8"
dependencies = [
    # Add your project dependencies here
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
